--- a/style.css
+++ b/style.css
@@ -131,9 +131,8 @@ nav {
     align-items: center;
     margin: 10px;
     padding: 20px;
-    width: 100%;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     border: 2px solid #eeebe8 ;
     background: linear-gradient(to right, blue,  red, white);
 }
-
